--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=serverless
+# ================== BANCO DE DADOS POSTGRES ==================
+spring.jpa.database=postgresql
+spring.sql.init.platform=postgress
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NOME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
+spring.jpa.hibernate.ddl-auto=${DDL}
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
