add: Repositories ok

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-# ================== BANCO DE DADOS POSTGRES ==================
-spring.jpa.database=postgresql
-spring.sql.init.platform=postgress
+# Configurações do banco de dados
+spring.datasource.url=jdbc:postgresql://localhost:5432/serverless
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NOME}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
-spring.jpa.hibernate.ddl-auto=${DDL}
+
+# Configurações do JPA
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
