--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
         <artifactId>jjwt-jackson</artifactId>
         <version>0.11.5</version>
     </dependency>
+	<!-- Logs e Monitoramento -->
+	<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-actuator</artifactId>
+	</dependency>
 	</dependencies>
 
 	<build>
