fix: Criando um .gcloudignore e alterações para o deploy.

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-actuator</artifactId>
 	</dependency>
+	<!-- Google Cloud -->
+	<dependency>
+    <groupId>com.google.cloud.sql</groupId>
+    <artifactId>postgres-socket-factory</artifactId>
+    <version>1.15.1</version>
+	</dependency>
 	</dependencies>
 
 	<build>
