--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 # Configurações do banco de dados
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.url=jdbc:postgresql:///${DB_NAME}?cloudSqlInstance=${CLOUD_SQL_INSTANCE}&socketFactory=com.google.cloud.sql.postgres.SocketFactory&useSSL=false
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configurações do JPA
-spring.jpa.hibernate.ddl-auto=${DDL}
+spring.jpa.hibernate.ddl-auto=${DDL:update}
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # JWT Configuration (256-bit key)
-jwt.secret=${JWT_SECRET}
+jwt.secret=${JWT_SECRET:chave_default}
 
 # Actuator
 management.endpoints.web.exposure.include=health,metrics,info,prometheus
@@ -23,5 +23,13 @@ logging.level.com.example.serverless=DEBUG
 logging.level.org.springframework.security=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 logging.file.name=logs/application.log
-logging.logback.rollingpolicy.max-file-size =10MB
+logging.logback.rollingpolicy.max-file-size=10MB
 logging.logback.rollingpolicy.max-history=5
+
+# Debug Configuration
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.com.zaxxer.hikari=DEBUG
+logging.level.org.springframework.jdbc=DEBUG
+
+server.port=${PORT:8080}
